# rtsp_image_transport

./: CMakeLists.txt  README.rst  package.xml  rtsp_image_transport_plugins.xml
.github/workflows/: ci.yml
cfg/: RTSPPublisher.cfg  RTSPSubscriber.cfg
src/: frame_data.cpp  frame_data.h  frame_extractor.cpp  frame_extractor.h  frame_injector.cpp  frame_injector.h  init.cpp  init.h  log_level.h  publish_rtsp_stream.cpp  publisher_plugin.cpp  publisher_plugin.h  rtsp_camera_proxy.cpp  stream_client.cpp  stream_client.h  stream_decoder.cpp  stream_decoder.h  stream_encoder.cpp  stream_encoder.h  stream_server.cpp  stream_server.h  streaming_error.h  subscriber_plugin.cpp  subscriber_plugin.h  video_codec.cpp  video_codec.h
