<?xml version="1.0"?>
<package format="3">
    <name>rtsp_image_transport</name>
    <version>0.1.0</version>
    <description>Transmit video streams with the Real-Time Streaming Protocol</description>
    <license>Apache-2.0</license>
    <author>Timo Röhling</author>
    <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Röhling</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>ffmpeg</depend>
    <depend>image_transport</depend>
    <depend>live555</depend>
    <depend>pluginlib</depend>
    <depend>std_msgs</depend>
    <exec_depend>message_runtime</exec_depend>
    <export>
        <image_transport plugin="${prefix}/rtsp_image_transport_plugins.xml" />
    </export>
</package>
